src/test/deca/context/valid/class/23-CastValid.deca
/* Description:
    test cast

    Historique:
      cree le 20/01/2020
    Sortie attendu:
     decac ne doit afficher rien
*/

class A {
  int a = 0;
  void setA(int a){
    this.a = a;
  }
}

class C extends A{
  int b = this.a;
}

{
  C c = new C();
  A a = new A();
  a = (A) (c);
}
